# rete

./: .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  Cargo.toml  GAP_ANALYSIS.md  README.md  generate_test_vectors.py  justfile  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
crates/rete-core/: Cargo.toml
crates/rete-core/src/: error.rs  hash_types.rs  hdlc.rs  identity.rs  ifac.rs  lib.rs  msgpack.rs  packet.rs  token.rs
crates/rete-core/tests/: interop_vectors.rs
crates/rete-daemon/: Cargo.toml
crates/rete-daemon/src/: command.rs  compression.rs  config.rs  control.rs  daemon.rs  event.rs  file_store.rs  identity.rs  lib.rs  monitoring.rs  pickle.rs  rete_event.rs  session.rs  subscriber.rs  test_subscriber.rs
crates/rete-daemon/tests/: shared_daemon_attach.rs  shared_daemon_attach_tcp.rs  shared_daemon_boot.rs  shared_daemon_config.rs  shared_daemon_control.rs  shared_daemon_restart.rs  shared_daemon_robustness.rs
crates/rete-daemon/tests/common/: mod.rs
crates/rete-embassy/: Cargo.toml
crates/rete-embassy/src/: lib.rs
crates/rete-embassy/tests/: multi_interface.rs  node_tests.rs
crates/rete-iface-auto/: Cargo.toml
crates/rete-iface-auto/src/: lib.rs
crates/rete-iface-kiss/: Cargo.toml
crates/rete-iface-kiss/src/: lib.rs
crates/rete-iface-lora/: Cargo.toml
crates/rete-iface-lora/src/: csma.rs  lib.rs  split.rs
crates/rete-iface-serial/: Cargo.toml
crates/rete-iface-serial/src/: lib.rs
crates/rete-iface-tcp/: Cargo.toml
crates/rete-iface-tcp/src/: lib.rs
crates/rete-lxmf/: Cargo.toml
crates/rete-lxmf-core/: Cargo.toml
crates/rete-lxmf-core/src/: lib.rs  message.rs  stamp.rs
crates/rete-lxmf/src/: lib.rs  message.rs  peer.rs  propagation.rs  router.rs  stamp.rs
crates/rete-lxmf/src/router/: codec.rs  delivery.rs  event.rs  forward.rs  mod.rs  outbound.rs  peering.rs  propagation.rs  tickets.rs
crates/rete-lxmf/tests/: lxmf_vectors.rs
crates/rete-stack/: Cargo.toml
crates/rete-stack/src/: destination.rs  lib.rs  node_core.rs
crates/rete-stack/src/node_core/: announce.rs  destination.rs  hooks.rs  ingest.rs  link.rs  mod.rs  ratchet.rs  request_receipt.rs
crates/rete-tokio/: Cargo.toml
crates/rete-tokio/src/: hub.rs  lib.rs  local.rs  reconnect.rs  tcp_server.rs
crates/rete-tokio/tests/: local_ipc.rs  multi_interface.rs
crates/rete-tokio/tests/common/: mod.rs
crates/rete-transport/: Cargo.toml
crates/rete-transport/src/: announce.rs  buffer.rs  channel.rs  dedup.rs  lib.rs  link.rs  path.rs  receipt.rs  request.rs  resource.rs  snapshot.rs  storage.rs  storage_std.rs  transport.rs
crates/rete-transport/src/transport/: announce.rs  link.rs  mod.rs  path.rs  receipt.rs  resource.rs
crates/rete-transport/tests/: computed_vectors.rs  forwarding.rs  link_integration.rs  path_request.rs
docs/: ARCHITECTURAL_REVIEW_2026-04-01.md  METRICS_PLAN.md  REFACTOR_TRACKER.md  RNODE_VISION.md  WEB_CLIENT_PLAN.md
docs/app-sketches/: README.md  bbs-file-board.md  chat-service.md  content-service.md  mapping-telemetry.md
docs/shared-instance/: CUTOVER_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PARITY_TEST_MATRIX.md  ROADMAP.md  ROLLBACK_CHECKLIST.md  TESTING_CONTAINERS.md  TEST_STRATEGY.md  TRACKER.md
docs/shared-instance/contracts/: DIFFS.md  GOLDEN_TRACES.md  README.md  REFERENCE.md  SCOPE.md
docs/shared-instance/epics/: EPIC-00-freeze-contract.md  EPIC-01-daemon-surface.md  EPIC-02-unix-shared-attach.md  EPIC-03-tcp-shared-attach.md  EPIC-04-control-plane-rpc.md  EPIC-05-canonical-shared-state.md  EPIC-06-config-persistence-restart.md  EPIC-07-operator-utility-parity.md  EPIC-08-e2e-matrix.md  EPIC-09-soak-cutover.md  TEMPLATE.md
examples/daemon/: Cargo.toml
examples/daemon/src/: main.rs
examples/esp32c6/: Cargo.toml
examples/esp32c6/.cargo/: config.toml
examples/esp32c6/src/: main.rs  rng.rs
examples/esp32s3/: Cargo.toml
examples/esp32s3/.cargo/: config.toml
examples/esp32s3/src/: admin_page.html  config.rs  dhcp.rs  display.rs  login_page.html  main.rs  rng.rs  status.rs  tcp_iface.rs  web.rs  web_page.html
examples/linux/: Cargo.toml
examples/linux/src/: file_store.rs  main.rs
examples/rp2040/: Cargo.toml
examples/rp2040/src/: main.rs
tests/docker/: e2e-unified.Dockerfile  prometheus.yml  python-node.Dockerfile  rnsd-entrypoint.sh  rnsd-node.Dockerfile  rust-node.Dockerfile  shared-mode-e2e.Dockerfile
tests/docker/topologies/: auto-2node.yml  tcp-3node-ifac.yml  tcp-3node.yml  tcp-5node-relay.yml  tcp-monitoring.yml  tcp-path-request.yml  tcp-propagation-peering.yml  tcp-robustness.yml
tests/fixtures/shared-instance/: index.json
tests/interop/: CONTAINER_TESTING.md  announce_appdata_interop.py  announce_dedup_e2e_interop.py  announce_flood_interop.py  audit_constants_interop.py  auto_data_interop.py  auto_group_isolation_interop.py  auto_interop.py  channel_interop.py  channel_ordering_interop.py  channel_relay_interop.py  computed_vectors.json  concurrent_links_interop.py  concurrent_traffic_interop.py  config_file_interop.py  container_runner.py  data_integrity_interop.py  direct_connect_interop.py  docker_auto_interop.py  docker_channel_interop.py  docker_helpers.py  docker_ifac_interop.py  docker_link_interop.py  docker_live_interop.py  docker_monitoring_interop.py  docker_path_request_interop.py  docker_proof_routing_interop.py  docker_python_auto.py  docker_relay_interop.py  docker_resource_interop.py  docker_robustness_interop.py  docker_transport_relay_interop.py  dual_interface_interop.py  esp32c6_3node_relay_interop.py  esp32c6_diag_announce.py  esp32c6_diag_channel.py  esp32c6_diag_relay.py  esp32c6_link_initiate_interop.py  esp32c6_link_interop.py  esp32c6_proof_interop.py  (+78 more)
tests/interop/docker_py_helpers/: channel_node.py  link_node.py  path_a_node.py  path_c_node.py  proof_receiver.py  proof_sender.py  relay_node.py  resource_node.py  robustness_valid.py  tcp_node.py
tests/interop/shared_mode/: container_runner.py  socket_proxy.py  (+3 more)
tests/shared_contract/: test_fixture_index.py  test_golden_traces.py  test_reference_inventory.py
(+76 files in other folders)
