[package]
name        = "rete-core"
description = "Reticulum Network Stack (RNS) — packet parsing and cryptography. no_std, no alloc."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[features]
default = []
alloc   = []   # enables owned/heap-allocated packet types
serde   = ["dep:serde"]

[dependencies]
x25519-dalek  = { workspace = true }
ed25519-dalek = { workspace = true }
aes           = { workspace = true }
cbc           = { workspace = true }
sha2          = { workspace = true }
hmac          = { workspace = true }
hkdf          = { workspace = true }
rand_core     = { workspace = true }
zeroize       = { workspace = true }
serde         = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }
hex        = "0.4"
sha2       = "0.10"
rand_core  = { version = "0.6", features = ["std"] }
