[package]
name        = "rete-embassy"
description = "Embassy executor integration for rete"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
rete-core       = { workspace = true }
rete-transport  = { workspace = true }
rete-stack      = { workspace = true }
embassy-time    = { workspace = true }
embassy-futures = { workspace = true }
embedded-io-async = { workspace = true }
rand_core       = { workspace = true }

[dev-dependencies]
embassy-executor  = { workspace = true, features = ["arch-std", "executor-thread"] }
embassy-time      = { workspace = true, features = ["mock-driver"] }
critical-section  = { version = "1", features = ["std"] }
tokio             = { workspace = true }
rand              = "0.8"
