[package]
name        = "rete-iface-auto"
description = "AutoInterface — LAN peer discovery via IPv6 multicast for rete"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
rete-core  = { workspace = true }
rete-stack = { workspace = true }
sha2       = { workspace = true, features = ["std"] }
tokio      = { workspace = true }
socket2    = { version = "0.5", features = ["all"] }
nix        = { version = "0.29", features = ["net", "socket"] }
log        = "0.4"
