[package]
name        = "rete-iface-kiss"
description = "KISS TNC serial interface for rete"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
rete-core = { workspace = true }
rete-stack = { workspace = true }
embedded-io-async = { workspace = true }
