[package]
name        = "rete-lxmf-core"
description = "LXMF core types (no_std) — message, stamp, constants"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
rete-core = { workspace = true, features = ["alloc"] }
sha2      = { workspace = true }
hkdf      = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
rand = "0.9"
