[package]
name        = "rete-lxmf"
description = "LXMF — Lightweight Extensible Message Format for Reticulum"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
rete-core = { workspace = true }
sha2 = { workspace = true, features = ["std"] }
