[package]
name        = "rete-lxmf"
description = "LXMF — Lightweight Extensible Message Format for Reticulum"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = ["router"]
router = ["rete-stack", "rete-transport", "rand_core", "bzip2"]

[dependencies]
rete-lxmf-core = { workspace = true }
rete-core = { workspace = true, features = ["alloc"] }
rete-stack = { workspace = true, optional = true }
rete-transport = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
sha2 = { workspace = true, features = ["std"] }
bzip2 = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = { workspace = true }
hex = "0.4"
