[package]
name        = "rete-transport"
description = "Reticulum Network Stack (RNS) — routing, path tables, announce handling. no_std + alloc."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
rete-core     = { workspace = true }
heapless      = { workspace = true }
sha2          = { workspace = true }
rand_core     = { workspace = true }
x25519-dalek  = { workspace = true }
hkdf          = { workspace = true }
zeroize       = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
hex        = "0.4"
rand       = "0.8"
