[package]
name        = "rete-transport"
description = "Reticulum Network Stack (RNS) — routing, path tables, announce handling. no_std + alloc."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[features]
std = []
hosted = ["dep:hashbrown"]
relay-debug = ["std", "dep:tracing"]
serde = ["dep:serde", "rete-core/serde"]

[dependencies]
rete-core     = { workspace = true, features = ["alloc"] }
heapless      = { workspace = true }
sha2          = { workspace = true }
rand_core     = { workspace = true }
x25519-dalek  = { workspace = true }
hkdf          = { workspace = true }
zeroize       = { workspace = true }
hashbrown     = { version = "0.16", default-features = false, features = ["default-hasher"], optional = true }
serde         = { workspace = true, optional = true }
tracing       = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
hex        = "0.4"
rand       = "0.8"
