[package]
name    = "rete-example-esp32s3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rete-esp32s3"
path = "src/main.rs"

[dependencies]
# Rete crates
rete-core       = { path = "../../crates/rete-core" }
rete-stack      = { path = "../../crates/rete-stack", features = ["alloc"] }
rete-embassy    = { path = "../../crates/rete-embassy" }
rete-iface-lora = { path = "../../crates/rete-iface-lora" }

# ESP-HAL ecosystem (pinned to esp-hal v1.0.0 release)
esp-hal = { version = "1.0.0", default-features = false, features = ["esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", default-features = false, features = ["esp32s3", "embassy", "esp-radio"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", default-features = false, features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", default-features = false, features = ["esp32s3"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32s3", "auto", "critical-section"] }

# Embassy
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embassy-net = { version = "0.8.0", features = ["dhcpv4", "medium-ethernet", "tcp", "udp"] }
embassy-sync = "0.6"
embassy-futures = "0.1"

# WiFi (esp-radio + embassy-net share smoltcp 0.12 — no version conflicts)
esp-radio = { version = "0.17.0", default-features = false, features = ["wifi", "esp32s3", "unstable", "smoltcp"] }

# LoRa
lora-phy = "3"

# Embedded traits
embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = "0.7"

# Display
ssd1306 = { version = "0.10", default-features = false, features = ["graphics"] }
embedded-graphics = "0.8"
profont = "0.7"

# Flash storage
esp-storage = { version = "0.8", default-features = false, features = ["esp32s3"] }
embedded-storage = "0.3"

# Misc
static_cell = "2.1.0"
rand_core = { version = "0.6", default-features = false }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
