[package]
name    = "rete-example-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rete-linux"
path = "src/main.rs"

[[bin]]
name = "rete-serial-bridge"
path = "src/bin/serial_bridge.rs"

[dependencies]
rete-core         = { workspace = true }
rete-transport    = { workspace = true, features = ["serde", "relay-debug"] }
rete-stack        = { workspace = true, features = ["serde"] }
rete-tokio        = { workspace = true }
rete-iface-tcp    = { workspace = true }
rete-iface-serial = { workspace = true }
rete-iface-auto   = { workspace = true }
rete-lxmf         = { workspace = true }
tokio             = { workspace = true }
serde_json        = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
toml              = "0.8"
rand              = "0.8"
hex               = "0.4"
libbz2-rs-sys     = { version = "0.2.2", default-features = false, features = ["rust-allocator"] }
tokio-serial      = "5.4"
