[package]
name    = "rete-example-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rete-linux"
path = "src/main.rs"

[[bin]]
name = "rete-serial-bridge"
path = "src/bin/serial_bridge.rs"

[features]
test-output = ["rete-daemon/test-output"]

[dependencies]
rete-core         = { workspace = true }
rete-transport    = { workspace = true, features = ["serde", "relay-debug"] }
rete-stack        = { workspace = true, features = ["serde"] }
rete-tokio        = { workspace = true }
rete-iface-tcp    = { workspace = true }
rete-iface-serial = { workspace = true }
rete-iface-auto   = { workspace = true }
rete-lxmf         = { workspace = true }
rete-daemon       = { workspace = true }
tracing            = { workspace = true, features = ["std"] }
tokio             = { workspace = true }
serde_json        = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
rand              = "0.8"
hex               = "0.4"
tokio-serial      = "5.4"
